# make-agent

./: AGENTS.md  Makefile.sample  README.md  main.py  orchestrator.mk  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
docs-site/: index.html  quickstart.html
docs-site/examples/: k8s-monitoring-session.html  minimal-agent.html
docs-site/reference/: cli.html  makefile-format.html
docs-site/workflows/: interactive-shell.html  project-settings.html
docs/plans/: 2026-03-18-make-agent-design.md  2026-03-24-yaml-agent-spec-design.md  2026-03-27-advanced-makefile-features-design.md
examples/: codebase-archaeology.mk  file-editor.mk  file-explorer.mk  file-ops.mk  orchestra.mk
examples/self-improving/: README.md  orchestrator.mk
make_agent/: agent.py  agent_shell.py  app_dirs.py  builtin_tools.py  commands.py  create_agent.py  main.py  memory.py  parser.py  settings.py  tools.py
make_agent/builtin_tools/: __init__.py  agent_tools.py  file_tools.py
make_agent/templates/: orchestra.mk
tests/: test_agent.py  test_app_dirs.py  test_builtin_tools.py  test_create_agent.py  test_e2e_smoke.py  test_file_tools.py  test_main.py  test_memory.py  test_parser.py  test_settings.py  test_tools.py
