[project]
name = "make-agent"
version = "0.1.0"
description = "Simple AI agent"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "litellm>=1.82.4",
    "pytest>=9.0.2",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[project.scripts]
make_agent = "make_agent.main:main"
make-agent-create = "make_agent.create_agent:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
