[project]
name = "make-agent"
version = "0.2.0"
description = "AI‑assistant‑as‑Makefile: a tool to create and manage AI agents using a simple YAML configuration."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "any-llm-sdk[openai,anthropic]==1.13.0",
    "pyyaml>=6",
    "pytest>=9.0.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.8.5",
]

[project.scripts]
make_agent = "make_agent.main:main"
make-agent-create = "make_agent.create_agent:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/dmtr/make-agent"

[tool.setuptools.package-data]
make_agent = ["templates/*.mk"]

[tool.pytest.ini_options]
markers = [
    "e2e: end-to-end tests that call the real API (skipped by default; pass --e2e to run)",
]

[tool.ruff.lint]
ignore = ["E741"]
