[project]
name = "makefile-agent"
version = "0.3.1"
description = "AI‑assistant‑as‑Makefile: a tool to create and manage AI agents using a simple YAML configuration."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [
    { name = "Dmitriy Sorochenkov" },
]
keywords = ["ai", "agent", "makefile", "llm", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "any-llm-sdk[openai,anthropic,ollama,openrouter]==1.13.0",
    "pyyaml>=6",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.8.5",
]

[project.scripts]
make_agent = "make_agent.main:main"
make-agent-create = "make_agent.create_agent:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/dmtr/make-agent"
Repository = "https://github.com/dmtr/make-agent"
Issues = "https://github.com/dmtr/make-agent/issues"

[tool.setuptools.package-data]
make_agent = ["templates/*.mk"]

[tool.pytest.ini_options]
markers = [
    "e2e: end-to-end tests that call the real API (skipped by default; pass --e2e to run)",
]

[tool.ruff.lint]
ignore = ["E741"]
